--- a/intro.bib
+++ b/intro.bib
@@ -2,12 +2,15 @@
   author    = {Pravina Rodrigues},
   title     = {Kinesics, Proxemics, and Haptics: A Śākta Method for Comparative Theology},
   booktitle = {The Wiley Blackwell Companion to Comparative Theology: A Festschrift in Honor of Francis X. Clooney, SJ},
-  editor    = {Axel Takacs and Joseph Kimmel},
+  editor    = {Takacs, Axek and Kimmel, Joseph},
+  series    = {The Wiley Blackwell companions to religion},
+  
   publisher = {John Wiley \& Sons Ltd.},
   year      = {2023},
   chapter   = {7},
+  address   = {Hoboken, NJ, USA}, 
+  pages     = {63--76}, 
   keywords  = {seclit},
-  pages    = {63--76}, 
 }
 
 @misc{nadicakra,
@@ -23,7 +26,7 @@
   author       = {O’Hanlon, Rosalind and Washbrook, David},
   title        = {Religious Cultures in an Imperial Landscape},
   booktitle    = {Religious Cultures in Early Modern India: New Perspectives},
-  series       = {SAHC},
+  series       = {South Asian History and Culture},
   volume       = {2},
   number       = {2},
   year         = {2011},
@@ -64,6 +67,36 @@
   address   = {New Delhi},
   keywords  = {seclit}, 
 }%!
+
+
+@book{colophon2022,
+  title     = {The Syntax of Colophons - A Comparative Study Across Pothi Manuscripts},
+  editor={Balbir, Nalini and Ciotti, Giovanni},
+  publisher = {De Gruyter},
+  address   = {Berlin/Boston},
+  year      = {2022},
+  series    = {Studies in Manuscript Cultures},
+  volume    = {27},
+  pages     = {406},
+  doi       = {10.1515/9783110795271},
+  url       = {https://library.oapen.org/handle/20.500.12657/61037},
+  keywords  = {seclit}, 
+}
+
+@incollection{colophon2022formigatti,
+  title={Colophons in Fourteenth-Century Nepalese Manuscripts: Materials for the Study of the Nepalese Renaissance (I)},
+  author={Formigatti, Camillo},
+  booktitle={The Syntax of Colophons - A Comparative Study Across Pothi Manuscripts},
+  series={Studies in Manuscript Cultures},
+  volume={27}, 
+  editor={Balbir, Nalini and Ciotti, Giovanni},
+  pages={43--117},
+  year={2022},
+  publisher={De Gruyter},
+  address={Berlin/Boston},
+  keywords={seclit},
+}%!
+
 
 @article{sandra2003,
    title={Phylogeny for the faint of heart: a tutorial},
@@ -175,10 +208,11 @@ keywords={seclit},
   keywords={primary},
 }%!
 
-@incollection{soma1960,
+@book{soma1960,
   author    = {Gonda, Jan},
-  title     = {Soma},
-  booktitle = {Religionen der Menschheit. Band 11: Veda und älterer Hinduismus},
+  title     = {Die Religionen Indiens 1: Veda und älterer Hinduismus},
+  series    = {Religionen der Menschheit},
+  volume    = {11},
   publisher = {Kohlhammer},
   address   = {Stuttgart},
   year      = {1960},
@@ -522,10 +556,13 @@ keywords={seclit},
   title     = {Inklusivismus},
   editor    = {Oberhammer, Gerhardt},
   booktitle = {Inklusivismus: Eine indische Denkform},
+  series    = {Publications of the De Nobili Research Library, Occasional Papers},
+  volume    = {2}, 
   publisher = {Institut für Indologie der Universität Wien, Sammlung De Nobili; Commission Agents E.J. Brill},
+  pages     = {61--91}, 
   address   = {Wien},
   year      = {1983},
-  keywords   = {seclit},
+  keywords  = {seclit},
 }%!
 
 @book{vohd218,
@@ -1103,10 +1140,13 @@ keywords={primary},
   author    = {von Stietencron, Heinrich},
   title     = {Geplanter Synkretismus: Kaiser Akbars Religionspolitik},
   booktitle = {Die Religion von Oberschichten},
+  series    = {Deutsche Vereinigung für Religionsgeschichte}, 
+  volume    = {19}, 
   editor    = {Antes, Peter and Pahnke, Donate},
   publisher = {diagonal-Verlag},
   address   = {Marburg},
   year      = {1989},
+  note      = {Konferenzschrift}, 
   pages     = {53--72},
   keywords  = {seclit},
 }%!
@@ -1126,7 +1166,7 @@ keywords={primary},
   editor= {Vishnuswaroop, Swami},
   year={2017},
   publisher={Divine Yoga Institute},
-  note={Kathmandu},
+  address={Kathmandu},
   keywords={primary},
 }%!
 
@@ -1761,6 +1801,8 @@ keywords={seclit},
   author       = {Birch, Jason},
   title        = {The Proliferation of Āsanas in Late-Mediaeval Yoga Texts},
   booktitle    = {Yoga in Transformation: Historical and Contemporary Perspectives},
+  series       = {Vienna Forum for Theology and the Study of Religions},
+  volume       = {16}, 
   year         = {2018},
   editor       = {Baier, Karl and Maas, Philipp A. and  Preisendanz, Karin},
   publisher    = {Vienna University Press},
@@ -2450,6 +2492,32 @@ keywords={primary},
    keywords={catalogues},
 }%!
 
+@book{meyer1926,
+  author       = {J.~J. Meyer},
+  title        = {Das altindische Buch vom Welt- und Staatsleben. Das \textit{Arthaśāstra} des Kauṭilya},
+  publisher    = {Leipzig},
+  year         = {1926},
+ keywords       = {seclit}, 
+}
+
+@book{bendall1883,
+  author       = {Cecil Bendall},
+  title        = {Catalogue of the Buddhist Sanskrit Manuscripts in the University Library, Cambridge},
+  publisher    = {Cambridge University Press},
+  address      = {Cambridge},
+  year         = {1883},
+  keywords={catalogues},
+}
+
+@book{petech1984,
+  author       = {Luciano Petech},
+  title        = {Medieval History of Nepal (c. 750--1480)},
+  publisher    = {Istituto Italiano per il Medio ed Estremo Oriente},
+  address      = {Rome},
+  year         = {1984},
+  keywords     = {seclit},
+}
+
 @book{maas1950,
   title={Textkritik},
   author={Maas, P.},
@@ -2464,9 +2532,8 @@ keywords={primary},
   title     = {The So-called Yoga of Suppression in the Pātañjala Yogaśāstra},
   booktitle = {Yogic Perception, Meditation, and Altered States of Consciousness},
   editor    = {Franco, Eli and Eigner, Dagmar},
-  series    = {Sitzungsberichte der phil.-hist. Klasse},
-  volume    = {794},
-  number    = {Beiträge zur Kultur- und Geistesgeschichte Asiens 64},
+  series    = {Beiträge zur Kultur- und Geistesgeschichte Asiens},
+  volume    = {64}, 
   pages     = {263--282},
   year      = {2009},
   publisher = {Verlag der Österreichischen Akademie der Wissenschaften},
@@ -2507,12 +2574,12 @@ keywords={primary},
 @incollection{mallinson2021,
   author    = {Mallinson, James},
   title     = {Nath Yogis and their ‘Amazing Apparel’ in Early Material and Textual Sources},
-  booktitle = {Objects, Images, Stories},
+  booktitle = {Objects, Images, Stories: Simon Digby's Historical Methods},
   editor    = {Orsini, Francesca},
   year      = {2021},
   publisher = {Oxford University Press},
   doi       = {10.1093/oso/9780190123963.003.0004},
-  keywords={seclit}, 
+  keywords=   {seclit}, 
 }%!
 
 @incollection{mallinson2012hatha,
@@ -2634,6 +2701,9 @@ keywords={primary},
   address={Pondicherry},
   keywords={seclit},
 }%!
+
+
+
 
 @misc{goodall1998,
   title={Kiraṇatantra (Bhaṭṭa Rāmakaṇṇtha's Commentary)},
