--- a/preamble.tex
+++ b/preamble.tex
@@ -19,6 +19,14 @@
 \linespread{1.2}
 \flushbottom
 
+
+% ===============================
+% Bessere Absätze?!
+% ===============================
+\raggedbottom
+\setlength{\parindent}{1.5em}
+\setlength{\parskip}{0pt}
+
 % ===============================
 % Debug: Kontrolle der Höhen im Log
 % ===============================
@@ -80,7 +88,8 @@
 %%% more functionality
 \PassOptionsToPackage{hyphens}{url}
 
-\usepackage{pdflscape}
+\usepackage{pdflscape} % oder lscape
+\usepackage{graphicx}
 %\usepackage{amsmath}
 \usepackage{url}
 \usepackage{microtype}
