--- a/bindu.tex
+++ b/bindu.tex
@@ -156,48 +156,23 @@
 \chapter{Introduction}
 \cleardoublepage
 
-\begin{description}
-\phantomsection\label{n2description}  
-\item[\textbf{Siglum:}] \Huge{\getsiglum{N2}} \nocite{tybn2}
-\item[\textbf{Collection:}] National Archives, Kathmandu; microfilmed by the Nepalese German Manuscript Preservation Project (NGMPP) and catalogued by the Nepalese German Manuscript Cataloguing Project (NGMCP).
-\item[\textbf{Title:}] \emph{Tattvayogavinda} (= \textit{Tattvayogabindu}; the title folio reads: \textit{srī rājayogabinduprārambhaḥ}. The library card reads \textit{Rājayogatattvabindu}.)
-\item[\textbf{Ms. No.:}] B 38/35 = A 1327-14
-\item[\textbf{Acc No.:}] NAK 3/750 
-\item[\textbf{Dimensions:}] 33 cm x 16 cm (B 38/35) and 27.5 cm x 10.3 cm (A 1327-14) x 11 folios   
-\item[\textbf{Material:}] Paper \hspace{0.5cm} \textbf{Language:} Sanskrit \hspace{0.5cm} \textbf{Script:} Devanāgarī 
-\item[\textbf{Date:}] 21 June 1591\footnote{I would like to express my sincere gratitude to Dr. Stanislav Jager, Prof. Dr. Dragomir Dimitrov, Dr. Martin Gansten, and, in particular, Anupam Suman for sharing their thoughts in decoding this intricate \emph{bhūtasāṃkhyā}--date. According to all the mentioned scholars (personal correspondence in person and via Email in December 2025), the colophon verse \emph{sūrye turaṅge navacandraghasre jyeṣṭhākhyakṛṣṇe bhṛguvārayuktam} encodes a calendrical date in the Nepal Saṃvat era using the \emph{bhūtasāṃkhyā} system along with standard lunar terminology. The \emph{bhūta} numerals \emph{sūrye} (=12, corresponding to the twelve Ādityas or solar months) and \emph{turaṅge} (=7, corresponding to the seven horses of the solar chariot) together yield the year 712, which is to be read in reverse order according to established \emph{bhūtasāṃkhyā} convention. The remainder of the verse specifies the lunar day and month (\emph{navacandraghasre} = \textit{amāvāsyā} or new-moon day; \emph{jyeṣṭhākhyakṛṣṇe} = month of Jyeṣṭha, Kṛṣṇa pakṣa) and fixes the weekday (\emph{bhṛguvārayuktam} = Friday). 
+\begin{landscape}
+\thispagestyle{empty}
 
-A critical chronological question that Suman and Gansten pointed out to me is whether the year ``712'' should be interpreted as an elapsed (completed) year, as is often assumed in Indian chronological studies, or as the ongoing (running) year. Suman notes that the verse employs the locative case throughout (\emph{sūrye turaṅge \ldots}), situating the act of writing ``in the year 712'' without any explicit qualifiers such as \emph{gate} (past), \emph{atīte} (gone), or \emph{samāpte} (completed) that would unambiguously indicate a completed year. This usage aligns with other Nepal Saṃvat colophons in which the locative is used to specify the current year at the time of composition.
+\vspace*{\fill}
+\begin{center}
+  \includegraphics[
+    width=0.8\paperheight,
+    height=1.2\paperwidth,
+    keepaspectratio
+  ]{pics/colosynop.png}
+\end{center}
+\vspace*{\fill}
 
-Astronomical testing confirms the necessity of reading NS 712 as a running year. If treated as elapsed (≈1592~CE), no occurrence of Jyeṣṭha Kṛṣṇa Amāvāsyā falling on a Friday can be established. Interpreted as a running year, however, the lunar and weekday data correspond precisely to 21 June 1591~CE, which is demonstrably Jyeṣṭha Kṛṣṇa Amāvāsyā and a Friday. This agreement is decisive, leaving little doubt that the author intended a running-year reckoning. Moreover, Suman emphasises that the date reflects the \textit{amānta} lunar system (in which a month begins immediately after the new moon), as is standard in Nepal Saṃvat, rather than the \textit{pūrṇimānta} system typical in North India.
+\captionof{figure}{Synoptic transcription of the manuscripts' final rubrics.}
+\label{fig:colosynop}
 
-Suman’s interpretation is further supported by parallels in other Nepalese manuscripts catalogued in the Nepal–German Manuscript Preservation Project (NGMPP), where locative constructions with full lunar details consistently yield coherent dates only when the year is understood as running. Historical precedent also supports this approach: \citeauthor[1883]{bendall1883} in the introduction and passim of his 19th-century Cambridge catalogue, stressed that Nepalese manuscript dates cannot be mechanically inferred from the year number alone, noting instances in which the \emph{tithi} and weekday would be inconsistent with an elapsed-year reading. Similarly, \citeauthor[1984]{petech1984} in his chapters on chronology and dating practices has shown that Nepal Saṃvat dates in inscriptions and manuscripts must be tested both astronomically and historically, warning against assuming uniform elapsed-year reckoning and demonstrating that a current-year framework is sometimes required when detailed calendrical elements are supplied.
-
-Taken together, locative grammar, manuscript parallels, and astronomical evidence establish the methodological principle that Nepal Saṃvat dates expressed in the locative must be interpreted in conjunction with internal calendrical details. Accordingly, the colophon year ``712'' must be understood as a running year. The corresponding historical date is therefore: Nepal Saṃvat 712 (running year), Jyeṣṭha Kṛṣṇa Amāvāsyā, Friday = 21 June 1591~CE. Suman also rules out the possibility of Śaka Saṃvat both philologically and astronomically. Furthermore, Suman argues, the precision of the date may reflect the author's deliberate choice, as 21 June 1591 falls on a new-moon day governed by the \textit{ārdrā nakṣatra}, which is particularly auspicious for yogic and Śaiva matters.}
-
-\item[\textbf{Condition:}] Incomplete
-\item[\textbf{Remarks:}] Manuscript \getsiglum{N2} has a \textit{lacuna} after section \uproman{34} up until section \uproman{48}. Approximately 23,50\% of the entire text is missing. The \textit{lacuna} is indicated on f. 8 recto l. 1. It stops at the same place where manuscript \getsiglum{N1} has missing folios. Thus, we have to assume that manuscript \getsiglum{N1} is the direct copy of manuscript \getsiglum{N2} or both stem from the same exemplar. The latter is more likely since \getsiglum{N2} sometimes includes several different and sometimes better readings.
-
-It should be noted that the palaeographical features of the manuscript—an unusually modern-looking Devanāgarī hand on paper—leave open whether the date recorded in \getsiglum{N2} refers to the manuscript itself, or, as seems quite possible, whether the scribe merely copied the colophon from the exemplar without providing any further indication of the precise date of this copy. 
-  
-  NGMCP catalogues another scan of the same manuscript under Ms. No. A 1327-14. The dimensions differ in the catalogue, but this must be sloppy cataloguing, since it is definitely the same manuscript. However, the latter scan is poor.    
-\item[\textbf{Incipit:}] \textit{śrīgaṇeśāya namaḥ} || \textit{atha rājayogaprakāro  likhyate} ||
-\item[\textbf{Final Rubric and Colophon:}] \textit{iti śrīparamarahasye śrīrāmacaṃdraviracitāyāṃ tatvayogavinda samāptam} ||\\
-  
-  || \textit{śubham} ||\\
-  
-  \textit{yad akṣarapadabhraṣṭaṃ mātrāhīnaṃ ca yad bhavet} ||\\
-  \textit{tat sarvaṃ kṣamya tām eva prasīda parameśvara} ||1||\\
-
-  \textit{sūrye turaṅge navacandraghasre}\\
-  \textit{jyeṣṭhākhyakṛṣṇe bhṛguvārayuktam} ||\\
-  \textit{tattvaprayogaḥ ṣaḍaharṣasaṃjñaṃ}\\
-  \textit{likhitaṃ suhetoḥ bhavatīha dehi} || \textit{bhūyāt} ||\footnote{I would like to propose the following tentative translation of \getsiglum{N2}'s final verse:\\
-
-``On Friday, on the new-moon day of the dark fortnight of [the month called] Jyeṣṭhā, in the [Nepal Saṃvat] year 712 [understood as the current year; corresponding to 21 June 1591 CE], the commissioned work of [the text] \emph{Tattva}[\emph{yogabindu}] was copied here on earth for a good purpose, [namely] bringing about that which is known as the sixfold joy, O [dear] soul [of men] (i.e. the reader). May it endure!''\\
-
-I take \textit{prayogaḥ} to mean ``commissioned work'' (cf. the lemma \emph{prayoga} in NWS; see \citeauthor[1926: 130 l. 41 et seqq.]{meyer1926}) and \textit{tattva°} as an abbreviated form of the title \emph{Tattvayogabindu}, employed to fit the metre. I understand \textit{ṣaḍaharṣa°} as ``six joys'' (the joy of the six senses: the five common senses plus \textit{manas}, cf. the \textit{yamas} in TYB \uproman{31}), since it seems highly improbable that \textit{ṣaḍaharṣa°} represents an alternative title of the text, and a literal reading such as ``six non-joys'' is nonsensical. The word is therefore either corrupted, or the suffix ``°a°'' was added to \textit{ṣaḍ°} to satisfy metrical requirements. Similarly, regarding \textit{dehi}, its precise meaning remains uncertain: it may be corrupt, and I have not found a convincing emendation. The two plausible interpretations are either as an imperative second-person singular, which seems contextually weak, or as a vocative singular in the non-standard form ``dehi'' (rather than the expected ``dehin''), with the missing ``°n'' possibly representing a minor scribal error. Finally, a metrical problem remains in the last line, which I am unable to resolve but which may indicate some form of textual corruption.}
-\end{description}
+\end{landscape}
 
 \chapter[Critical Edition \& Annotated Translation of the \emph{Tattvayogabindu}]{The \emph{Tattvayogabindu} of Rāmacandra \\ \huge  
   Critical Edition \& Annotated Translation}
